--- a/app/src/main/res/layout/item_popupwindow.xml
+++ b/app/src/main/res/layout/item_popupwindow.xml
@@ -28,7 +28,7 @@
                 android:background="@drawable/btn"
                 android:textColor="@color/deep_gray"
                 android:textSize="18sp"
-                android:text="@string/take_photo" />
+                android:text="@string/string_take_photo" />
         </LinearLayout>
 
         <TextView
