--- a/app/src/main/res/layout/item_mark_circle.xml
+++ b/app/src/main/res/layout/item_mark_circle.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
+    android:descendantFocusability="blocksDescendants"
     >
     <LinearLayout
         android:id="@+id/mark_item_left_linearlayout"
